[package]
name = "philiprehberger-byte-fmt"
version = "0.1.3"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Human-readable byte size formatting and parsing"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-byte-fmt"
keywords = ["bytes", "filesize", "human-readable", "formatting", "parsing"]
categories = ["value-formatting", "text-processing"]
