[package]
name = "philiprehberger-byte-fmt"
version = "0.1.7"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Human-readable byte size formatting and parsing"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-byte-fmt"
readme = "README.md"
rust-version = "1.70"
documentation = "https://docs.rs/philiprehberger-byte-fmt"
keywords = ["bytes", "filesize", "human-readable", "formatting", "parsing"]
categories = ["value-formatting", "text-processing"]
